- logout   + use redis to store black list of tokens - add remember_me functionality   + store local or session storage - implement token refresh mechanism - update the authen process - refactor retrieve claims from token - add navbar to home page
