# docs/swagger.json
@@ -112,6 +112,21 @@
                 ],
                 "responses": {}
             }
+        },
+        "/v1/auth/logout": {
+            "get": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
+                "description": "Logs out the currently authenticated user and redirects to the home page with a success toast notification.",
+                "tags": [
+                    "Authen"
+                ],
+                "summary": "Logout User",
+                "responses": {}
+            }
         }
     },
     "securityDefinitions": {
